test/typecheck/fail/duplicate_type_id4.sail
struct foo1 = { bar1 : unit }

struct foo1 = { bar2 : unit }